--- a/sample/src/main/res/layout/activity_card_io_integration.xml
+++ b/sample/src/main/res/layout/activity_card_io_integration.xml
@@ -2,17 +2,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin">
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <TextView
         android:id="@+id/statusTextView"
-        android:text="@string/no_token"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"/>
+        android:layout_marginBottom="20dp"
+        android:text="@string/no_token" />
 
     <LinearLayout
         android:id="@+id/cardNumberAndCamera"
@@ -28,24 +28,24 @@
             android:layout_height="wrap_content"
             android:layout_weight="8"
             android:inputType="number"
-            android:nextFocusDown="@+id/cardExpiryField"/>
+            android:nextFocusDown="@+id/cardExpiryField" />
 
         <ImageButton
+            android:id="@+id/start_card_io_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:src="@android:drawable/ic_menu_camera"
-            android:id="@+id/start_card_io_button"
             android:contentDescription="@string/launch_card_io"
-            android:onClick="onStartCardIo"/>
+            android:onClick="onStartCardIo"
+            android:src="@android:drawable/ic_menu_camera" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/cardExpiryAndCvC"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginBottom="8dp">
+        android:layout_marginBottom="8dp"
+        android:orientation="horizontal">
 
         <EditText
             android:id="@+id/cardExpiryMonth"
@@ -53,7 +53,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:inputType="number"
-            android:nextFocusDown="@+id/cardCvcField"/>
+            android:nextFocusDown="@+id/cardCvcField" />
 
         <EditText
             android:id="@+id/cardExpiryYear"
@@ -61,7 +61,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:inputType="number"
-            android:nextFocusDown="@+id/cardCvcField"/>
+            android:nextFocusDown="@+id/cardCvcField" />
 
         <EditText
             android:id="@+id/cardCvcField"
@@ -69,22 +69,22 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:inputType="number"
-            android:nextFocusDown="@+id/cardNameField"/>
+            android:nextFocusDown="@+id/cardNameField" />
     </LinearLayout>
 
     <EditText
+        android:id="@+id/cardNameField"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/cardNameField"
-        android:inputType="text"
-        android:imeOptions="actionSend"/>
+        android:imeOptions="actionSend"
+        android:inputType="text" />
 
     <Button
         android:id="@+id/button_submit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="14sp"
-        android:text="@string/card_info_submit"
         android:layout_marginTop="20dp"
-        android:onClick="createToken"/>
+        android:onClick="createToken"
+        android:text="@string/card_info_submit"
+        android:textSize="14sp" />
 </LinearLayout>
