--- a/webpay-token/src/main/res/layout/fragment_web_pay_token.xml
+++ b/webpay-token/src/main/res/layout/fragment_web_pay_token.xml
@@ -5,9 +5,9 @@
     tools:context=".WebPayTokenFragment">
 
     <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/token_fragment_open_dialog"
-            android:id="@+id/open_dialog_button"
-            android:layout_gravity="start|top"/>
+        android:id="@+id/open_dialog_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="start|top"
+        android:text="@string/token_fragment_open_dialog" />
 </FrameLayout>
