--- a/sample/src/main/res/layout/activity_card_dialog.xml
+++ b/sample/src/main/res/layout/activity_card_dialog.xml
@@ -1,11 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    style="@style/BaseLayout">
 
     <TextView
         android:id="@+id/statusTextView"
@@ -16,8 +10,8 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/button_own"
+        android:layout_below="@id/statusTextView"
         android:onClick="onButtonClicked"
-        android:layout_below="@id/statusTextView" />
+        android:text="@string/button_own" />
 
 </RelativeLayout>
