--- a/sample/src/main/res/layout/activity_card_io_integration.xml
+++ b/sample/src/main/res/layout/activity_card_io_integration.xml
@@ -20,7 +20,7 @@
         <EditText
             android:id="@+id/cardNumberField"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:layout_weight="8"
             android:hint="@string/hint_number"
             android:inputType="number"
